# pre-commit-sensei

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  Readme.adoc  setup.cfg
pre_commit_sensei/: check_slides.py  check_toc.py  check_workbook.py
