# setup.cfg
[metadata]
name = pre-commit-sensei
description = Pre-commit hook for Sensei
version = 0.1.0
author = Jérôme Marchand
author_email = jerome.marchand@zenika.commit
license = MIT

[options]
packages = find:

[options.entry_points]
console_scripts =
    check-slides = pre_commit_sensei.check_slides:main
    check-toc = pre_commit_sensei.check_toc:main
    check-workbook = pre_commit_sensei.check_workbook:main
